[package]
name = "knoll"
description = "A command-line tool for configuring macOS displays"
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/gawashburn/knoll"
categories = ["command-line-utilities"]
rust-version = "1.71"

[dependencies]
clap = "4.4"
objc = "0.2"
block = "0.1"
static_assertions = "1.1"
serde = "1.0"
ron = "0.8"
serde_json = "1.0"
serde_repr = "0.1"
serde_tuple = "0.5"
humantime = "2.1"
log = "0.4"
stderrlog = "0.5"
once_cell = "1.18"
