[package]
name = "knoll"
description = "A command-line tool for configuring macOS displays"
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/gawashburn/knoll"
categories = ["command-line-utilities"]
rust-version = "1.85.0"

[dev-dependencies]

[dependencies]
clap = { version = "4.5", features = ["color", "cargo"] }
static_assertions = "1.1"
serde = "1.0"
ron = "0.10"
serde_json = "1.0"
serde_repr = "0.1"
serde_tuple = "1.1"
humantime = "2.2"
log = "0.4"
simplelog = "0.12"
once_cell = "1.21"
tempfile = "3.20"
rand = "0.9"